ui_files = qt5.preprocess(
  ui_files: [
    'AboutWindow.ui',
    'ArchiveListItemWidget.ui',
    'BracketedWindow.ui',
    'DependencyTreeWidget.ui',
    'DactMenuBar.ui',
    'MainWindow.ui',
    'OpenCorpusDialog.ui',
    'PreferencesWindow.ui',
    'StatisticsWindow.ui',
    'TreeNodeInspector.ui',
  ])